changes to CBL follwoing meeting with Housing

--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -195,18 +195,12 @@
     </div>
 </div>
 
-<div class="content-notes-box">
-  <h3 class="govuk-heading-s">Content notes:</h3>
-  <ul class="govuk-list govuk-list--bullet">
-      <li>guidance about what we need to be re-drafted and consistent with the before you start page</li>
 
-  </ul>
-</div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>we will use the same pattern as for adding person or children </li>
-    <li>agreed by Housing - need 6 addresses and a textbox on the last one if the applicant need to add more addresses</li>
+    <li>we use the same pattern as for adding person or children </li>
+    <li>agreed by Housing - need 6 addresses and <a href="/forms/housing/CBLaddress4">textbox on the last one if the applicant need to add more addresses</a></li>
     </ul>
 </div>
 <div class="IT-notes-box">
