--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
           Apply online for council housing
       </h1>
@@ -67,7 +67,6 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>pattern agreed by housing</li>
       <li>they need the NI to provide the service</li>
-      <li>might need to double check with legal though</li>
       <li>GOVUK guidance <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/" target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
     </ul>
   </div>
