--- a/app/views/forms/housing/CBLadd-person1-loop.html
+++ b/app/views/forms/housing/CBLadd-person1-loop.html
@@ -166,7 +166,6 @@
     <ul class="govuk-list govuk-list--bullet">
    <li>We will ask about pregnancy, and joint applicant after - agreed by Housing</li>
    <li>Ideally we want this pattern to be used (ask one by one, and ask on a different screen if they want to add another)</li>
-   <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: Tell us about anyone you didn't enter yet (placeholder for now, content by Sharon later)</li>
    <li><a href="/forms/housing/CBLadd-person.html">Try an alternative</a><strong> using javascript and adding all people on one page, this is close to what IT has developed so far</strong></li>
    </ul>
 </div>
@@ -178,6 +177,7 @@
       <li>need to pick one Gender, but description if Other is optional - Enter gender</li>
       <li>pick yes or no living with you - Confirm live with you now</li>
       <li>same for all other screen for person 2 etc....</li>
+      <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLperson5">Tell us about anyone else you didn't add yet (if applicable)</a> (placeholder for now, content by Sharon later)</li>
     </ul>
 </div>
 
