--- a/app/views/forms/housing/CBLaddress4.html
+++ b/app/views/forms/housing/CBLaddress4.html
@@ -123,12 +123,12 @@
 
       {% from "button/macro.njk" import govukButton %}
       <br>
+      <form class="form" method="post">
       {{ govukButton({
         text: "Continue",
-        classes: "button-primary",
-        href: "/forms/housing/CBLreasons.html"
+        classes: "button-primary"
       }) }}
-
+    </form>
 
     </div>
 </div>
