--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -134,7 +134,7 @@
                     <div class="govuk-checkboxes__item">
                         <input class="govuk-checkboxes__input" id="area-13" name="area" type="checkbox" value="area13">
                         <label class="govuk-label govuk-checkboxes__label" for="area-13">
-                                Thornliebank
+                                Thornliebank - Giffnock
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
@@ -155,10 +155,28 @@
                                 Busby and Netherlee
                         </label>
                     </div>
+
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                            <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                                    Neilston
+                            </h2>
+                        </legend>
                     <div class="govuk-checkboxes__item">
                         <input class="govuk-checkboxes__input" id="area-17" name="area" type="checkbox" value="area17">
                         <label class="govuk-label govuk-checkboxes__label" for="area-17">
-                                Giffnock
+                                Neilston North
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-18" name="area" type="checkbox" value="area18">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-18">
+                                Neilston South
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-19" name="area" type="checkbox" value="area19">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-19">
+                                Neilston Glen
                         </label>
                     </div>
                 </div>
@@ -179,7 +197,7 @@
 <div class="IT-notes-box">
         <h3 class="govuk-heading-s">IT notes:</h3>
         <ul class="govuk-list govuk-list--bullet">
-        <li>can be coded - Giffnock has been added. It was missing from the form</li>
+        <li>can be coded - Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
         <li>Select at least one</li>
         </ul>
     </div>
