--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -199,7 +199,7 @@
             id: "more-detail",
             classes: "govuk-!-width-two-thirds",
             label: {
-              text: "Add any other information about sleeping arrangement we might need to know about (optional)"
+              text: "Add any other information about sleeping arrangements we might need to know about (optional)"
             }
           }) }}
 
