--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -65,7 +65,7 @@
           name: "know-erc",
           fieldset: {
             legend: {
-              text: " Are you an employee of, or related to, an employee or East Renfrewshire Council or to a Councillor?",
+              text: " Are you an employee of, or related to, an employee of East Renfrewshire Council or to a Councillor?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -88,7 +88,7 @@
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLmonitor.html"
+          href: "/forms/housing/CBLdeclaration2.html"
         }) }}
       
     </div>
@@ -97,7 +97,8 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>OK - can be coded, flow changed though, monitor info is now after</li>
+    <li>OK - can be coded, flow changed though, monitor info is removed</li>
+    <li>word changed: of East Renfrewshire, instead of 'or'</li>
     </ul>
 </div>
 
