--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -40,14 +40,14 @@
   items: [
     {
       value: "yes-own",
-      text: "Yes, I own it",
+      text: "Yes, I own another property",
       conditional: {
         html: addressHtml
       }
     },
     {
       value: "yes-rent",
-      text: "Yes, I rent it",
+      text: "Yes, I rent another property",
       conditional: {
         html: addressHtml
       }
@@ -67,10 +67,9 @@
 
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p><strong> unclear it's other properties if read quickly!</strong></p>
- 
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <p><strong> change of wording: "another property" instead of 'it'</strong></p>
 </div>
 
 {% endblock %}
