--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -51,8 +51,8 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-6">Contact</h2>
         <ul class="govuk-list">
-        <li>Phone: 0141 577 3002</li>
-        <li>Email: <a href="mailto:housingadvice@eastrenfrewshire.gov.uk">housingadvice@eastrenfrewshire.gov.uk</a></li>
+        <li>Phone: 0141 577 3001</li>
+        <li>Email: <a href="mailto:housingallocationenquiries@eastrenfrewshire.gov.uk">housingallocationenquiries@eastrenfrewshire.gov.uk</a></li>
         </ul>
 
       <p class="govuk-!-margin-bottom-9 govuk-!-margin-top-9">
@@ -60,10 +60,11 @@
       </p>
     </div>
 </div>
-<div class="content-notes-box">
-  <h3 class="govuk-heading-s">Content notes:</h3>
+<div class="design-notes-box">
+  <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
     <li>message for homeless applicants? - related link might be enough</li>
+    <li>if NI is used, do we mention it in the list of things to have at hands before starting the form? - it's early in the form...could be ok</li>
     <li>original form: <a href="https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0" target="_blank">https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0</a></li>
   </ul>
 </div>
@@ -75,6 +76,8 @@
       <li><a href="/forms/housing/CBLbabies.html">pregnancy page</a></li>
       <li><a href="/forms/housing/CBLadd-children.html">children staying occasionally</a></li>
       <li><a href="/forms/housing/CBLjoint.html">joint applicant</a></li>
+      <li>if there is a joint applicant, we need 5 years of addresses too .....</li>
+      <li>we remove the monitor information page and add a link on the last page instead</li>
     </ul>
   </div>
 
