--- a/app/views/forms/housing/CBLconfirmation-email.html
+++ b/app/views/forms/housing/CBLconfirmation-email.html
@@ -19,11 +19,7 @@
                 Application submitted
             </h1>
             <div class="govuk-panel__body">
-              {% if data['email'] %}
-              We’ve sent an email to confirm your application to <strong> {{ data['email']}}</strong>
-              {% else %}
-              We will send a confirmation of receipt by post within <strong>3 working days</strong>
-              {% endif%}
+                We’ve sent an email to confirm your application to <strong>applicant.email@gmail.com</strong>
             </div>
           </div>
           <p>Thank you for submitting your housing registration form.</p>
