--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -8,11 +8,12 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
           Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
+      <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
         {% from "textarea/macro.njk" import govukTextarea %}
 
@@ -56,14 +57,15 @@
 
       {{ govukButton({
         text: "Continue",
-        classes: "button-primary",
-        href: "/forms/housing/CBLrecourse.html"
+        classes: "button-primary"
       }) }}
+      </form>
     </div>
 </div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
   <p>wording is different - now asking WILL live with you</p>
   <p>validation: Confirm you or anyone under immigration control</p>
+  <p>Edit: 06/12, if they say no they don't see the next question about recourse to public funds</p>
 </div>
 {% endblock %}
