--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -21,7 +21,7 @@
         name: "other-children",
         fieldset: {
           legend: {
-            text: "Do you have a child who spends part of their time living with you and part of their time living with another carer?",
+            text: "Do you have a child who spends part of their time living with you and part of their time living with another family member or carer?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -47,8 +47,7 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>Content from Sharon - to review with Housing- to be confirm this week </p>
-  <p>should we add guidance about the age of the child? (16 - 18?)</p>
+   <p>Content from Sharon - reviewed with Housing</p>
   <p>if they say yes, then they will <strong>add children like we added "person" up to 5 </strong> and again we will have a box at the bottom of the 5th child, so they can add any extra children</p>
   <p>They are only allowed an extra room max normally in the process</p>
 </div>
