--- a/app/views/forms/housing/CBLout.html
+++ b/app/views/forms/housing/CBLout.html
@@ -15,14 +15,10 @@
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <p>You need to contact our Housing Advice and Homelessness Team</p>
       <ul class="govuk-list">
-          <li>Phone: 0141 577 3002</li>
-          <li>Email: <a href="mailto:housingadvice@eastrenfrewshire.gov.uk">housingadvice@eastrenfrewshire.gov.uk</a></li>
+          <li>Phone: 0141 577 3001</li>
+          <li>Email: <a href="mailto:housingallocationenquiries@eastrenfrewshire.gov.uk">housingallocationenquiries@eastrenfrewshire.gov.uk</a></li>
       </ul>
     </div>
-</div>
-<div class="design-notes-box">
-  <h3 class="govuk-heading-s">Design notes:</h3>
-  <p>contact details number needed</p>
 </div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
