--- a/app/views/forms/housing/CBLrecourse.html
+++ b/app/views/forms/housing/CBLrecourse.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
           Apply online for council housing
       </h1>
@@ -17,7 +17,7 @@
       {% from "radios/macro.njk" import govukRadios %}
 
       {{ govukRadios({
-        idPrefix: "is-recourse-conditional",
+        idPrefix: "is-recourse",
         name: "is-recourse",
         fieldset: {
           legend: {
@@ -27,7 +27,7 @@
           }
         },      
         hint: {
-          text: "This applies to someone under immigration control. It means you're not entitled to benefits, home office asylum support or public housing."
+          text: "This applies to some people under immigration control. It means you're not entitled to benefits, home office asylum support or public housing."
         },
         items: [
           {
@@ -40,10 +40,7 @@
           },
           {
             value: "I don't know",
-            text: "I don't know",
-            conditional: {
-              html: "<p>We could provide more guidance here</p>"
-            }
+            text: "I don't know"
           }
         ]
       }) }}
@@ -57,14 +54,13 @@
 <div class="design-notes-box">
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li>Guidance might be needed.</li>
-    <li><strong>orignal question was: Do you have any restriction on your access to public funds</strong></li>
-    <li>If guidance is needed we could maybe add it under a "I don't know" radio button? (to be discussed further with Housing)</li>
+    <li>Housing would follow up with the applicant if they said "I don't know", but we let them go through</li>
   </ul>
 </div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
-  <p>Not sure if we will add a 3rd radio - guidance might change</p>
+  <p>Routing: Yes takes you out, No and I don't know is taking you through.</p>
   <p>validation: Confirm if no recourse to public funds</p>
+  <p>they only see this question if they say yes to the previous one (immigration) and in the guidance "someone" is now "some people"</p>
 </div>
 {% endblock %}
