--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -25,9 +25,9 @@
       <h2 class="govuk-heading-m erc-text-blue">Before you start</h2>
       <p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>this form takes most people around 30 minutes to complete</li>
+            <li>this form takes most people around 30 minutes to 1 hour to complete</li>
             <li>you cannot save the form and go back to it</li>
-            <li>you need addresses for the last 5 years</li>
+            <li>you need addresses for the last 5 years for you and for your joint applicant if you have one</li>
           </ul>
       </p>
 
@@ -41,7 +41,7 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-top-3">Related information </h2>
       <ul class="govuk-list">
-        <li><a href="" target="_blank">What happen next</a></li>
+        <li><a href="/forms/housing/CBLwhat-next.html" target="_blank">What happen next</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/article/1628/Homelessness" target="_blank">Homelessness</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/young-persons-housing-service" target="_blank">Young person's housing support service</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/sheltered-housing" target="_blank">Sheltered housing</a></li>
