--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -18,7 +18,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>3/12 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold"> Simplified CBL</a><br>more content added - still need to code add children properly<br><strong class="govuk-tag info">last update:</strong><strong> 5/12 evening</strong></li><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold"> Simplified CBL</a><br>more content added - still need to code add children properly and second set of addresses<br><strong class="govuk-tag info">last update:</strong><strong> 7/12 morning</strong></li><br>
         <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Members of household</a><br>possible version<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li>
       </ul>
 
