--- a/app/views/forms/housing/CBLconfirmation-post.html
+++ b/app/views/forms/housing/CBLconfirmation-post.html
@@ -32,7 +32,7 @@
                 </strong>
               </div>
 
-          <h3 class="govuk-heading-m"><a href="#">What happens next</a></h3> 
+          <h3 class="govuk-heading-m"><a href="/forms/housing/CBLwhat-next.html">What happens next</a></h3> 
 
           <p>Could you complete our <a href="#">Equal Opportunities Questionnaire</a>? (optional)</p>
 
